--- a/server/src/main/resources/index.html
+++ b/server/src/main/resources/index.html
@@ -5,7 +5,7 @@
     <title>Tic-tac-toe</title>
   </head>
   <body>
-    <script type="text/javascript" src="js/client-jsdeps.js"></script>
+    <script type="text/javascript" src="js/client-jsdeps.min.js"></script>
     <script type="text/javascript" src="js/client-opt.js"></script>
   </body>
 </html>
